# go-lua

./: .gitignore  README.md
cmd/glua/: app.lua  glua.go
cmd/lua/: app.go
cmd/plugin/: HTTPPlugin.go  LuaPlugin.go  Makefile  app  app.go  cfg.json  liblua.dylib  run_linux.sh  run_mac.sh
lib/: CMakeLists.txt  make_linux64_lua53.sh  make_osx_lua53.sh  make_win64_mingw_lua53.sh
lib/boot/: Makefile  boot.c  libs.c  libs.h
lib/boot/mod/: example.c  glua.c
lib/release/linux/: lua  luac
lib/release/osx/: liblua.dylib  lua  luac
prebuild/: glua  liblua.dylib
